--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -370,11 +370,102 @@ h1 {
     background-color: gray;
 }
 
+.add-camera-options{
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    max-height: 400px;
+    width: 100%;
+    overflow-x: hidden;
+}
+
+.add-camera-options div{
+    margin-left: 2%;
+}
+
+.add-camera-options h3{
+    margin-bottom: 1%;
+    margin-top: 1%;
+}
+
+.add-camera-options
+
+/**/
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 90px;
+    height: 34px;
+  }
+  
+.switch input {
+    display:none;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: black;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: gray;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(55px);
+}
+
+.slider:after{
+    content:'No';
+    color: black;
+    display: block;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    font-size: 15px;
+    font-family: Verdana, sans-serif;
+}
+
+input:checked + .slider:after{  
+    content:'Yes';
+}
+  
+/**/
+
 .add-camera-plans{
     display: flex;
     width: 100%;
     height: fit-content;
     justify-content: space-evenly;
+    padding-bottom: 2%;
 }
 
  .add-camera-plans-free{
@@ -523,30 +614,27 @@ h1 {
     margin-left: 3%;
 }
 
-.add-camera-menu-options{
+.add-camera-menu-inputs{
     display: flex;
     width: 100%;
     z-index: 900;
-    justify-content: space-between;
+    justify-content: space-between; 
+    /* margin-left: 5%; */
 }
 
-.add-camera-menu-options-left{
+.add-camera-menu-inputs-left{
     display: flex;
     flex-direction: column;
     width: 50%;
     z-index: 90;
 }
 
-.add-camera-menu-options-left p{
-    margin-left: 5%;
-}
 
-.add-camera-menu-options-left input{
-    margin-left: 5%;
+.add-camera-menu-inputs-left input{
     margin-bottom: 2%;
 }
 
-.add-camera-menu-options-right{
+.add-camera-menu-inputs-right{
     display: flex;
     flex-direction: column;
     width: 50%;
@@ -554,13 +642,27 @@ h1 {
     padding-right: 5%;
 }
 
-.add-camera-menu-options-right p{
+.add-camera-menu-inputs-right p{
     margin-left: 5%;
 }
 
-.add-camera-menu-options-right input{
+.add-camera-menu-inputs-right input{
     margin-left: 5%;
     margin-bottom: 2%;
+}
+
+.add-camera-options-imageInput-options p{
+    margin-left: 2%;
+}
+
+.add-camera-options-detectionBoundary-values{
+    display: flex;
+}
+
+.add-camera-options-detectionBoundary-values input{
+    margin-left: 1%;
+    margin-right: 1%;
+    width: 2vw;
 }
 
 .add-camera-menu-button{
@@ -569,10 +671,11 @@ h1 {
     justify-content: end;
     width: 100%;
     padding: 2%;
+    margin-right: 10%;
 }
 
 .add-camera-menu-button button{
-    margin-right: 5%;
+    margin-left: 1%;
     cursor: pointer;
     padding: 10px 5%;
 }
