contact list is now dynamic and contact add and remove is funcitonal

--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -771,7 +771,7 @@ h2 {
 .panel-information-statistics-status-online-container-number {
     height: 30%;
     margin-left: 5%;
-    font-size: x-large;
+    font-size: large;
 }
 
 .panel-information-statistics-status-online-container-label {
@@ -823,7 +823,7 @@ h2 {
 .panel-information-statistics-status-offline-container-number {
     height: 30%;
     margin-left: 5%;
-    font-size: x-large;
+    font-size: large;
 }
 
 .panel-information-statistics-status-offline-container-cameras {
