--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -105,10 +105,11 @@ h1 {
     width: 15vw;
     height: 12.85vh;
     border-bottom: 1px #102026 solid;
+    justify-content: center;
 }
 
 .logo-nav-logo {
-    width: 70%;
+    width: 100%;
     background-image: url("../Images/safe-forest.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -159,7 +160,7 @@ h1 {
 .menu-options-home {
     width: 100%;
     height: 30%;
-    margin-top: 5%;
+    margin-top: 5vh;
     color: #102026;
     display: flex;
     flex-direction: column;
@@ -167,23 +168,19 @@ h1 {
     transition: width 0.3s ease;
 }
 
-
-
 .menu-options-home-label {
     display: flex;
     align-items: center;
-    height: 35px;
-    width: 60%;
     margin-left: 10%;
     border-bottom: 2px #102026 solid;
+    font-size: 0.9rem;
 }
 
 .menu-options-home-dashboard {
     cursor: pointer;
     margin-top: 2%;
     display: flex;
-    width: 100%;
-    height: 25%;
+    font-size: 0.8rem;
 }
 
 .menu-options-home-dashboard-icon {
@@ -198,7 +195,6 @@ h1 {
     display: flex;
     justify-content: start;
     align-items: center;
-    width: 50%;
 }
 
 .menu-options-home-dashboard:hover {
@@ -209,8 +205,7 @@ h1 {
 .menu-options-home-camera {
     display: flex;
     cursor: pointer;
-    width: 100%;
-    height: 25%;
+    font-size: 0.8rem;
 }
 
 .menu-options-home-camera-icon {
@@ -225,7 +220,6 @@ h1 {
     display: flex;
     justify-content: start;
     align-items: center;
-    width: 50%;
 }
 
 .menu-options-home-camera:hover {
@@ -247,18 +241,16 @@ h1 {
 .menu-options-settings-label {
     display: flex;
     align-items: center;
-    height: 35px;
-    width: 60%;
     margin-left: 10%;
     border-bottom: 2px #102026 solid;
+    font-size: 0.9rem;
 }
 
 .menu-options-settings-general {
     cursor: pointer;
     margin-top: 2%;
     display: flex;
-    width: 100%;
-    height: 25%;
+    font-size: 0.8rem;
 }
 
 .menu-options-settings-general-icon {
@@ -273,7 +265,6 @@ h1 {
     display: flex;
     justify-content: start;
     align-items: center;
-    width: 50%;
 }
 
 .menu-options-settings-general:hover {
@@ -284,8 +275,7 @@ h1 {
 .menu-options-settings-security {
     cursor: pointer;
     display: flex;
-    width: 100%;
-    height: 25%;
+    font-size: 0.8rem;
 }
 
 .menu-options-settings-security-icon {
@@ -300,7 +290,6 @@ h1 {
     display: flex;
     justify-content: start;
     align-items: center;
-    width: 50%;
 }
 
 .menu-options-settings-security:hover {
@@ -311,8 +300,7 @@ h1 {
 .menu-options-settings-alert {
     cursor: pointer;
     display: flex;
-    width: 100%;
-    height: 25%;
+    font-size: 0.8rem;
 }
 
 .menu-options-settings-alert-icon {
@@ -327,7 +315,6 @@ h1 {
     display: flex;
     justify-content: start;
     align-items: center;
-    width: 50%;
 }
 
 
@@ -338,11 +325,11 @@ h1 {
 
 /*################# ADD CAMERA MENU #################*/
 
-#add-camera-menu{
-    display: none; 
+#add-camera-menu {
+    display: none;
     position: fixed;
-    top: 50%; 
-    left: 50%; 
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     flex-direction: column;
     height: fit-content;
@@ -352,32 +339,32 @@ h1 {
     border: 1px black solid;
 }
 
-.add-camera-menu-cancel{
+.add-camera-menu-cancel {
     display: flex;
     justify-content: end;
     width: 100%;
     z-index: 90;
 }
 
-.add-camera-menu-cancel img{
+.add-camera-menu-cancel img {
     height: 100%;
     background: none;
     border: none;
 }
 
-.add-camera-menu-cancel img:hover{
+.add-camera-menu-cancel img:hover {
     cursor: pointer;
     background-color: gray;
 }
 
-.add-camera-plans{
+.add-camera-plans {
     display: flex;
     width: 100%;
     height: fit-content;
     justify-content: space-evenly;
 }
 
- .add-camera-plans-free{
+.add-camera-plans-free {
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -386,23 +373,23 @@ h1 {
     padding: 1%;
 }
 
-.add-camera-plans-free:hover{
+.add-camera-plans-free:hover {
     background-color: gray;
     cursor: pointer;
 }
 
-.add-camera-plans-free-title{
+.add-camera-plans-free-title {
     display: flex;
     justify-content: center;
 }
 
-.add-camera-plans-free-price{
+.add-camera-plans-free-price {
     display: flex;
     margin-top: 1%;
     margin-left: 5%;
 }
 
-.add-camera-plans-free-description{
+.add-camera-plans-free-description {
     display: flex;
     flex-wrap: wrap;
     width: 80%;
@@ -413,7 +400,7 @@ h1 {
     height: 100%;
 }
 
-.add-camera-plans-free-checks{
+.add-camera-plans-free-checks {
     display: flex;
     height: 20%;
     margin-left: 5%;
@@ -421,7 +408,7 @@ h1 {
     align-items: end;
 }
 
- .add-camera-plans-standard{
+.add-camera-plans-standard {
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -430,23 +417,23 @@ h1 {
     padding: 1%;
 }
 
-.add-camera-plans-standard:hover{
+.add-camera-plans-standard:hover {
     background-color: gray;
     cursor: pointer;
 }
 
-.add-camera-plans-standard-title{
+.add-camera-plans-standard-title {
     display: flex;
     justify-content: center;
 }
 
-.add-camera-plans-standard-price{
+.add-camera-plans-standard-price {
     display: flex;
     margin-top: 1%;
     margin-left: 5%;
 }
 
-.add-camera-plans-standard-description{
+.add-camera-plans-standard-description {
     display: flex;
     flex-wrap: wrap;
     width: 80%;
@@ -457,7 +444,7 @@ h1 {
     height: 100%;
 }
 
-.add-camera-plans-standard-checks{
+.add-camera-plans-standard-checks {
     display: flex;
     height: 20%;
     margin-left: 5%;
@@ -466,7 +453,7 @@ h1 {
 }
 
 
- .add-camera-plans-premium{
+.add-camera-plans-premium {
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -475,23 +462,23 @@ h1 {
     padding: 1%;
 }
 
-.add-camera-plans-premium:hover{
+.add-camera-plans-premium:hover {
     background-color: gray;
     cursor: pointer;
 }
 
-.add-camera-plans-premium-title{
+.add-camera-plans-premium-title {
     display: flex;
     justify-content: center;
 }
 
-.add-camera-plans-premium-price{
+.add-camera-plans-premium-price {
     display: flex;
     margin-top: 1%;
     margin-left: 5%;
 }
 
-.add-camera-plans-premium-description{
+.add-camera-plans-premium-description {
     display: flex;
     flex-wrap: wrap;
     width: 80%;
@@ -502,7 +489,7 @@ h1 {
     height: 100%;
 }
 
-.add-camera-plans-premium-checks{
+.add-camera-plans-premium-checks {
     display: flex;
     height: 20%;
     margin-left: 5%;
@@ -510,7 +497,7 @@ h1 {
     align-items: end;
 }
 
-.add-camera-menu-title{
+.add-camera-menu-title {
     display: flex;
     justify-content: space-between;
     margin-top: 2%;
@@ -519,34 +506,34 @@ h1 {
     z-index: 90;
 }
 
-.add-camera-menu-title h1{
+.add-camera-menu-title h1 {
     margin-left: 3%;
 }
 
-.add-camera-menu-options{
+.add-camera-menu-options {
     display: flex;
     width: 100%;
     z-index: 900;
     justify-content: space-between;
 }
 
-.add-camera-menu-options-left{
+.add-camera-menu-options-left {
     display: flex;
     flex-direction: column;
     width: 50%;
     z-index: 90;
 }
 
-.add-camera-menu-options-left label{
+.add-camera-menu-options-left label {
     margin-left: 5%;
 }
 
-.add-camera-menu-options-left input{
+.add-camera-menu-options-left input {
     margin-left: 5%;
     margin-bottom: 2%;
 }
 
-.add-camera-menu-options-right{
+.add-camera-menu-options-right {
     display: flex;
     flex-direction: column;
     width: 50%;
@@ -554,16 +541,16 @@ h1 {
     padding-right: 5%;
 }
 
-.add-camera-menu-options-right label{
+.add-camera-menu-options-right label {
     margin-left: 5%;
 }
 
-.add-camera-menu-options-right input{
+.add-camera-menu-options-right input {
     margin-left: 5%;
     margin-bottom: 2%;
 }
 
-.add-camera-menu-button{
+.add-camera-menu-button {
     display: flex;
     z-index: 90;
     justify-content: end;
@@ -571,7 +558,7 @@ h1 {
     padding: 2%;
 }
 
-.add-camera-menu-button button{
+.add-camera-menu-button button {
     margin-right: 5%;
     cursor: pointer;
     padding: 10px 5%;
@@ -771,7 +758,7 @@ h2 {
 .panel-information-statistics-status-online-container-number {
     height: 30%;
     margin-left: 5%;
-    font-size: large;
+    font-size: 1rem;
 }
 
 .panel-information-statistics-status-online-container-label {
@@ -823,7 +810,7 @@ h2 {
 .panel-information-statistics-status-offline-container-number {
     height: 30%;
     margin-left: 5%;
-    font-size: large;
+    font-size: 1rem;
 }
 
 .panel-information-statistics-status-offline-container-cameras {
@@ -876,6 +863,7 @@ h2 {
     margin-left: 8%;
     width: 35%;
     height: 55%;
+    font-size: 0.8rem;
 }
 
 .panel-information-statistics-smoke-24-hours-label {
@@ -903,6 +891,7 @@ h2 {
     margin-left: 8%;
     width: 35%;
     height: 55%;
+    font-size: 0.8rem;
 }
 
 .panel-information-statistics-smoke-7-days-label {
@@ -927,6 +916,7 @@ h2 {
     margin-left: 8%;
     width: 35%;
     height: 55%;
+    font-size: 0.8rem;
 }
 
 .panel-information-statistics-smoke-30-days-label {
@@ -993,7 +983,7 @@ th {
     padding: 20px 15px;
     text-align: left;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 0.6rem;
     text-transform: uppercase;
 }
 
@@ -1002,7 +992,7 @@ td {
     text-align: left;
     vertical-align: middle;
     font-weight: 300;
-    font-size: 12px;
+    font-size: 0.6rem;
     border-bottom: solid 1px rgba(255, 255, 255, 0.1);
 }
 
@@ -1123,11 +1113,11 @@ td {
 
 /*#################### SECURITY PAGE ####################*/
 
-#security{
+#security {
     justify-content: start;
 }
 
-.panel-security{
+.panel-security {
     height: 95%;
     width: 95%;
     margin-left: 2.5%;
@@ -1138,7 +1128,7 @@ td {
     flex-direction: column;
 }
 
-.panel-security-information{
+.panel-security-information {
     display: flex;
     flex-direction: column;
     background-color: #D9D9D9;
@@ -1147,14 +1137,14 @@ td {
     margin-bottom: 2.5%;
 }
 
-.panel-security-information-label{
+.panel-security-information-label {
     height: fit-content;
     width: fit-content;
     margin-left: 1%;
     margin-top: 1%;
 }
 
-.panel-security-information-form{
+.panel-security-information-form {
     display: flex;
     flex-direction: column;
     justify-self: flex-end;
@@ -1163,36 +1153,17 @@ td {
     width: 100%;
 }
 
-.panel-security-information-current-password{
+.panel-security-information-current-password {
     height: fit-content;
 }
 
-.panel-security-information-current-password p{
+.panel-security-information-current-password p {
     width: fit-content;
     height: fit-content;
     margin-left: 1%;
 }
 
-.panel-security-information-current-password input{
-    width: fit-content;
-    height: fit-content;
-    margin-left: 1%;
-    width: 95%;
-    height: 25px
-}
-
-.panel-security-information-new-password{
-    height: fit-content;
-    margin-top: 1%;
-}
-
-.panel-security-information-new-password p{
-    width: fit-content;
-    height: fit-content;
-    margin-left: 1%;
-}
-
-.panel-security-information-new-password input{
+.panel-security-information-current-password input {
     width: fit-content;
     height: fit-content;
     margin-left: 1%;
@@ -1200,11 +1171,30 @@ td {
     height: 25px
 }
 
-.panel-security-information-confirm-password{
+.panel-security-information-new-password {
+    height: fit-content;
     margin-top: 1%;
 }
 
-.panel-security-information-confirm-password p{
+.panel-security-information-new-password p {
+    width: fit-content;
+    height: fit-content;
+    margin-left: 1%;
+}
+
+.panel-security-information-new-password input {
+    width: fit-content;
+    height: fit-content;
+    margin-left: 1%;
+    width: 95%;
+    height: 25px
+}
+
+.panel-security-information-confirm-password {
+    margin-top: 1%;
+}
+
+.panel-security-information-confirm-password p {
     width: fit-content;
     height: fit-content;
     margin-left: 1%;
@@ -1212,7 +1202,7 @@ td {
     height: 25px
 }
 
-.panel-security-information-confirm-password input{
+.panel-security-information-confirm-password input {
     width: fit-content;
     height: fit-content;
     margin-left: 1%;
@@ -1220,7 +1210,7 @@ td {
     height: 25px
 }
 
-.panel-security-information-change{
+.panel-security-information-change {
     display: flex;
     justify-content: end;
     align-content: end;
@@ -1233,7 +1223,7 @@ td {
     padding: 10px 5%;
 }
 
-.panel-security-danger{
+.panel-security-danger {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -1241,7 +1231,7 @@ td {
     height: 30%;
 }
 
-.panel-security-danger-label{
+.panel-security-danger-label {
     display: flex;
     align-self: start;
     height: fit-content;
@@ -1258,7 +1248,7 @@ td {
     width: 100%;
 }
 
-.panel-security-danger-delete-account-label{
+.panel-security-danger-delete-account-label {
     display: flex;
     margin-left: 1%;
 }
@@ -1485,6 +1475,7 @@ select {
     color: gray;
     font-size: small;
 }
+
 /*#######################################################*/
 
 /*################# END AUTHENTICATION PAGE #################*/
@@ -1619,7 +1610,7 @@ select {
     padding-top: 3.2vh;
 }
 
-.panel-add-contacts-addbutton button{
+.panel-add-contacts-addbutton button {
     font-size: 20px;
 }
 
@@ -1651,4 +1642,151 @@ select {
 .margin-right {
     margin-left: 50%;
     display: block;
+}
+
+@media only screen and (max-width: 968px) {
+
+    /*################# SIDEBAR #################*/
+
+    .logo-nav-hamburguer {
+        display: none;
+    }
+
+    .menu-options-home-label {
+        display: none;
+    }
+
+
+    .menu-options-home-dashboard-text {
+        display: none;
+    }
+
+    .menu-options-home-dashboard:hover {
+        background-color: #b7d93d;
+        color: white;
+    }
+
+    .menu-options-home-camera-text {
+        display: none;
+    }
+
+
+    .menu-options-settings-label {
+        display: none;
+    }
+
+    .menu-options-settings-general {
+        cursor: pointer;
+        margin-top: 2%;
+        display: flex;
+        width: 100%;
+        height: 25%;
+    }
+
+    .menu-options-settings-general-text {
+        display: none;
+    }
+
+    .menu-options-settings-general:hover {
+        background-color: #b7d93d;
+        color: white;
+    }
+
+    .menu-options-settings-security-text {
+        display: none;
+    }
+
+    .menu-options-settings-security:hover {
+        background-color: #b7d93d;
+        color: white;
+    }
+
+    .menu-options-settings-alert-text {
+        display: none;
+    }
+
+
+    .menu-options-settings-alert:hover {
+        background-color: #b7d93d;
+        color: white;
+    }
+
+    /*HEADER*/
+    .header-greeting {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        height: 60%;
+        margin-left: 5%;
+    }
+
+    .header-greeting-top {
+        display: flex;
+        align-items: center;
+        font-size: 0.6rem;
+        /* background-color: #f2f2f2;*/
+    }
+
+    .header-greeting-bottom {
+
+        font-size: 0.4rem;
+        align-items: center;
+        /* background-color: #f2f2f2; */
+    }
+
+    .header-options-addcamera {
+        display: none;
+    }
+
+    .header-options-addcamera button {
+        display: none;
+    }
+
+    .header-options-leave {
+        font-size: 0.6rem;
+    }
+
+    .header-options-language {
+        display: flex;
+        justify-content: center;
+        size: 10px;
+    }
+
+    .header-options-notifications {
+        display: flex;
+        justify-content: center;
+        size: 10px;
+    }
+
+    /*PANEL - DASHBOARD*/
+
+    .panel-camera {
+        display: none;
+    }
+
+    .panel-information {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+        font-size: 0.8rem;
+    }
+
+    th {
+        font-size: 0.4rem;
+    }
+
+    td {
+        font-size: 0.5rem;
+    }
+
+    /*FOOTER*/
+    .footer-info {
+        font-size: 0.6rem;
+    }
+
+    .footer-update {
+        display: none;
+    }
 }
