--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -198,7 +198,7 @@ h1 {
 }
 
 .menu-options-home-dashboard:hover {
-    background-color: #C5D97E;
+    background-color: gray;
     color: white;
 }
 
@@ -223,7 +223,7 @@ h1 {
 }
 
 .menu-options-home-camera:hover {
-    background-color: #C5D97E;
+    background-color: gray;
     color: white;
 }
 
@@ -268,7 +268,7 @@ h1 {
 }
 
 .menu-options-settings-general:hover {
-    background-color: #C5D97E;
+    background-color: gray;
     color: white;
 }
 
@@ -293,7 +293,7 @@ h1 {
 }
 
 .menu-options-settings-security:hover {
-    background-color: #C5D97E;
+    background-color: gray;
     color: white;
 }
 
@@ -319,7 +319,7 @@ h1 {
 
 
 .menu-options-settings-alert:hover {
-    background-color: #C5D97E;
+    background-color: gray;
     color: white;
 }
 
@@ -337,6 +337,7 @@ h1 {
     background-color: #C0D966;
     z-index: 1000;
     border: 1px black solid;
+    border-radius: 5px;
 }
 
 .add-camera-menu-cancel {
@@ -372,6 +373,7 @@ h1 {
     width: 25%;
     height: fit-content;
     padding: 1%;
+    border-radius: 5px;
 }
 
 .add-camera-plans-free:hover {
@@ -416,6 +418,7 @@ h1 {
     width: 25%;
     height: fit-content;
     padding: 1%;
+    border-radius: 5px;
 }
 
 .add-camera-plans-standard:hover {
@@ -461,6 +464,7 @@ h1 {
     width: 25%;
     height: fit-content;
     padding: 1%;
+    border-radius: 5px;
 }
 
 .add-camera-plans-premium:hover {
@@ -682,6 +686,13 @@ margin-top: 2%;
     margin-left: 1%;
     cursor: pointer;
     padding: 10px 5%;
+    border: none;
+    border-radius: 5px;
+}
+
+.add-camera-menu-button button:hover{
+    background-color: gray;
+    color: white;
 }
 
 /*###################################################*/
@@ -773,8 +784,15 @@ h2 {
 
 
 .header-options-addcamera button {
-    height: 50%;
+    height: 80%;
+    border: none;
+    background-color: lightgray;
+    border-radius: 5px;
+}
 
+.header-options-addcamera button:hover {
+    background-color: gray;
+    color: white;
 }
 
 .header-options-language {
@@ -782,9 +800,19 @@ h2 {
     justify-content: center;
 }
 
+.header-options-language:hover {
+background-color: lightgray;
+border-radius: 5px;
+}
+
 .header-options-notifications {
     display: flex;
     justify-content: center;
+}
+
+.header-options-notifications:hover{
+background-color: lightgray;
+border-radius: 5px;
 }
 
 .header-options-leave {
@@ -797,7 +825,8 @@ h2 {
 }
 
 .header-options-leave:hover {
-    background-color: gray;
+    background-color: lightcoral;
+    border-radius: 5px;
 }
 
 .header-options-leave img {
@@ -809,6 +838,46 @@ h2 {
     display: flex;
     align-items: center;
     cursor: pointer;
+}
+
+
+
+#notification-panel {
+    display: flex;
+    position: fixed;
+    flex-direction: column;
+    left:75%;
+    height: fit-content;
+    background-color: white;
+    width: 20%;
+    padding: 1%;
+    z-index: 1000;
+    border: 1px black solid;
+    border-radius: 5px;
+}
+
+.notification-panel-header{
+    border-bottom: 1px black solid;
+}
+
+.notification-panel-body{
+    max-height: 150px; 
+    overflow-y: auto; 
+    padding-right: 8px;
+}
+
+.notification-panel-message{
+    display: flex;
+    flex-direction: column;
+    border-bottom: lightgray 1px solid;
+}
+
+.notification-panel-message:hover{
+    background-color: lightgray;
+}
+
+.notification-panel-message-top{
+    display: flex;
 }
 
 
@@ -1229,18 +1298,6 @@ td {
 }
 
 
-.footer-update {
-    display: flex;
-    flex-direction: row;
-    padding-right: 20px;
-}
-
-.footer-update div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
 /*#################### SECURITY PAGE ####################*/
 
 #security {
@@ -1351,6 +1408,13 @@ td {
 
 .panel-security-information-change button {
     padding: 10px 5%;
+    border: none;
+    border-radius: 5px;
+}
+
+.panel-security-information-change button:hover {
+    background-color: gray;
+    color: white;
 }
 
 .panel-security-danger {
@@ -1404,6 +1468,13 @@ td {
 
 .panel-security-danger-delete-account-button button {
     padding: 10px 5%;
+    border: none;
+    border-radius: 5px;
+}
+
+.panel-security-danger-delete-account-button button:hover {
+    background-color: gray;
+    color: white;
 }
 
 
@@ -1575,11 +1646,10 @@ select {
     width: 60%;
     height: 100%;
     font-size: larger;
-    background-color: transparent;
+    background-color: lightgray;
     border: 1px solid black;
     border-radius: 5px;
     cursor: pointer;
-
 }
 
 .panel-auth-container-register-submit button:hover {
@@ -1683,10 +1753,13 @@ select {
     width: 80%;
     height: 50%;
     cursor: pointer;
+    border: none;
+    border-radius: 5px;
 }
 
 .panel-general-account-button button:hover {
-    background-color: #C5D97E;
+    background-color: gray;
+    color: white;
 }
 
 
@@ -1742,6 +1815,14 @@ select {
 
 .panel-add-contacts-addbutton button {
     font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.panel-add-contacts-addbutton button:hover {
+    background-color: gray;
+    color: white;
 }
 
 
@@ -1792,7 +1873,7 @@ select {
     }
 
     .menu-options-home-dashboard:hover {
-        background-color: #C5D97E;
+        background-color: gray;
         color: white;
     }
 
@@ -1805,20 +1886,12 @@ select {
         display: none;
     }
 
-    .menu-options-settings-general {
-        cursor: pointer;
-        margin-top: 2%;
-        display: flex;
-        width: 100%;
-        height: 25%;
-    }
-
     .menu-options-settings-general-text {
         display: none;
     }
 
     .menu-options-settings-general:hover {
-        background-color: #C5D97E;
+        background-color: gray;
         color: white;
     }
 
@@ -1827,7 +1900,7 @@ select {
     }
 
     .menu-options-settings-security:hover {
-        background-color: #C5D97E;
+        background-color: gray;
         color: white;
     }
 
@@ -1837,7 +1910,7 @@ select {
 
 
     .menu-options-settings-alert:hover {
-        background-color: #C5D97E;
+        background-color: gray;
         color: white;
     }
 
@@ -1862,14 +1935,6 @@ select {
         font-size: 1.5vw;
         align-items: center;
         /* background-color: #f2f2f2; */
-    }
-
-    .header-options-addcamera {
-        display: none;
-    }
-
-    .header-options-addcamera button {
-        display: none;
     }
 
     .header-options-leave {
@@ -1916,9 +1981,6 @@ select {
         font-size: 0.6rem;
     }
 
-    .footer-update {
-        display: none;
-    }
 
     /*PANEL - MY CAMERAS*/
     .panel-camera-container-top-search {
