--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -94,7 +94,7 @@ h1 {
 
 /*################# SIDEBAR #################*/
 .side-nav {
-    background-color: #C0D966;
+     background-color: #C0D966; 
     height: 100vh;
     width: 15vw;
     transition: width 0.3s ease;
@@ -177,6 +177,7 @@ h1 {
     margin-top: 2%;
     display: flex;
     font-size: 0.8rem;
+    height: 7vh;
 }
 
 .menu-options-home-dashboard-icon {
@@ -202,6 +203,7 @@ h1 {
     display: flex;
     cursor: pointer;
     font-size: 0.8rem;
+    height: 7vh;
 }
 
 .menu-options-home-camera-icon {
@@ -247,6 +249,7 @@ h1 {
     margin-top: 2%;
     display: flex;
     font-size: 0.8rem;
+    height: 7vh;
 }
 
 .menu-options-settings-general-icon {
@@ -272,6 +275,7 @@ h1 {
     cursor: pointer;
     display: flex;
     font-size: 0.8rem;
+    height: 7vh;
 }
 
 .menu-options-settings-security-icon {
@@ -297,6 +301,7 @@ h1 {
     cursor: pointer;
     display: flex;
     font-size: 0.8rem;
+    height: 7vh;
 }
 
 .menu-options-settings-alert-icon {
@@ -505,7 +510,7 @@ h1 {
     width: 90px;
     height: 34px;
   }
-  
+
 .switch input {
     display:none;
 }
@@ -562,10 +567,10 @@ input:checked + .slider:before {
     font-family: Verdana, sans-serif;
 }
 
-input:checked + .slider:after{  
+input:checked + .slider:after{
     content:'Yes';
 }
-  
+
 /**/
 
 .add-camera-menu-options{
@@ -604,7 +609,7 @@ input:checked + .slider:after{
     display: flex;
     width: 100%;
     z-index: 900;
-    justify-content: space-between; 
+    justify-content: space-between;
     /* margin-left: 5%; */
 }
 
@@ -788,6 +793,7 @@ h2 {
 
 .header-options-addcamera button:hover {
     background-color: gray;
+    cursor: pointer;
     color: white;
 }
 
@@ -809,8 +815,8 @@ border-radius: 5px;
 }
 
 .header-options-notifications:hover{
-background-color: lightgray;
-border-radius: 5px;
+    background-color: lightgray;
+    border-radius: 5px;
 }
 
 .header-options-leave {
@@ -862,11 +868,12 @@ border-radius: 5px;
 
 .notification-panel-header{
     border-bottom: 1px black solid;
+    padding-bottom: 3%;
 }
 
 .notification-panel-body{
-    max-height: 150px; 
-    overflow-y: auto; 
+    max-height: 150px;
+    overflow-y: auto;
     padding-right: 8px;
 }
 
@@ -980,6 +987,7 @@ border-radius: 5px;
 
 .panel-information-statistics-status-online-container-cameras button:hover {
     background-color: lightgray;
+    cursor: pointer;
 }
 
 .panel-information-statistics-status-offline {
@@ -989,7 +997,7 @@ border-radius: 5px;
     justify-content: center;
     width: 50%;
     height: 100%;
-    
+
 }
 
 .panel-information-statistics-status-offline-container {
@@ -1029,6 +1037,7 @@ border-radius: 5px;
 
 .panel-information-statistics-status-offline-container-cameras button:hover {
     background-color: lightgray;
+    cursor: pointer;
 }
 
 .panel-information-statistics-smoke {
@@ -1422,6 +1431,7 @@ td {
 
 .panel-security-information-change button:hover {
     background-color: gray;
+    cursor: pointer;
     color: white;
 }
 
@@ -1482,6 +1492,7 @@ td {
 
 .panel-security-danger-delete-account-button button:hover {
     background-color: gray;
+    cursor: pointer;
     color: white;
 }
 
@@ -1556,7 +1567,7 @@ select {
     height: 3vh;
     margin-top: 1%;
     border-radius: 5px;
-    background: transparent;
+    background: white;
     border: 1px solid black;
 }
 
@@ -1662,6 +1673,7 @@ select {
 
 .panel-auth-container-register-submit button:hover {
     background-color: grey;
+    cursor: pointer;
 
 }
 
@@ -1707,7 +1719,7 @@ select {
 
 .panel-general-account-inputs {
     width: 81%;
-    height: 78%;
+    height: 74%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -1718,6 +1730,7 @@ select {
 .panel-general-account-inputs input[type="text"] {
     width: 95%;
     padding: 1%;
+    padding-bottom: 0%;
 }
 
 .panel-general-account-inputs-names input[type="text"] {
@@ -1752,14 +1765,18 @@ select {
 
 
 .panel-general-account-button {
-    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    width: 100%;
     height: 9%;
-    padding-left: 80%;
 }
 
 .panel-general-account-button button {
-    width: 80%;
+    width: 15vw;
     height: 50%;
+    margin-right: 11vw;
+    min-width: 100px;
     cursor: pointer;
     border: none;
     border-radius: 5px;
@@ -1767,6 +1784,7 @@ select {
 
 .panel-general-account-button button:hover {
     background-color: gray;
+    cursor: pointer;
     color: white;
 }
 
@@ -1822,14 +1840,16 @@ select {
 }
 
 .panel-add-contacts-addbutton button {
-    font-size: 20px;
+    min-width: fit-content;
+    width: 200px;
+    padding: 10px 5%;
     border: none;
     border-radius: 5px;
-    padding: 5px;
 }
 
 .panel-add-contacts-addbutton button:hover {
     background-color: gray;
+    cursor: pointer;
     color: white;
 }
 
